# rust_music_mcp_server

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
documentation/: README.md
documentation/architecture/: config-workflow.md  tool-system.md  transport-layer.md
documentation/client-mcp/: AGENT_GUIDE.md  PROMPTS_AND_RESOURCES.md
documentation/guides/: adding-tools.md  configuration.md
documentation/reference/: path-security.md  tool-output-formats.md  tool-output-quick-reference.md
documentation/roadmap/: musicbrainz-enhancements.md
documentation/tools/: musicbrainz-tools.md
documentation/tools/fs/: README.md  fs_delete.md  fs_list_dir.md  fs_rename.md
documentation/tools/mb/: README.md  common-concepts.md  mb_advanced_search.md  mb_artist_search.md  mb_cover_download.md  mb_identify_record.md  mb_label_search.md  mb_recording_search.md  mb_release_search.md  mb_work_search.md  rate-limiting.md  troubleshooting.md
documentation/tools/metadata/: README.md  read_metadata.md  write_metadata.md
scripts/: test_error_handling.py  test_http_client.py  test_identify_real.py  test_metadata_levels.py  test_stdio_client.py  test_tcp_client.py
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  mod.rs  server.rs
src/core/security/: mod.rs  path_validator.rs
src/core/transport/: config.rs  error.rs  http.rs  mod.rs  service.rs  stdio.rs  tcp.rs
src/domains/: mod.rs
src/domains/prompts/: error.rs  mod.rs  registry.rs  service.rs  templates.rs
src/domains/prompts/definitions/: code_review.rs  explain.rs  greeting.rs  mod.rs  summarize.rs
src/domains/resources/: error.rs  handlers.rs  mod.rs  registry.rs  service.rs
src/domains/resources/definitions/: config_example.rs  docs_readme.rs  mod.rs  server_info.rs
src/domains/tools/: error.rs  handlers.rs  mod.rs  registry.rs  router.rs
src/domains/tools/definitions/: mod.rs
src/domains/tools/definitions/fs/: delete.rs  list_dir.rs  mod.rs  rename.rs
src/domains/tools/definitions/mb/: README.md  advanced.rs  artist.rs  common.rs  cover_download.rs  identify_record.rs  label.rs  mod.rs  recording.rs  release.rs  work.rs
src/domains/tools/definitions/metadata/: mod.rs  read.rs  write.rs
