[package]
name = "music_mcp_server"
version = "0.1.0"
edition = "2024"
description = "A scalable MCP (Model Context Protocol) server template"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

# =============================================================================
# Feature Flags
# =============================================================================
# Build with different transport combinations:
#   cargo build                         -> stdio only (default, minimal)
#   cargo build --features tcp          -> stdio + tcp
#   cargo build --features http         -> stdio + http  
#   cargo build --features all          -> all transports
#   cargo build --no-default-features --features http  -> http only
# =============================================================================

[features]
default = ["stdio"]

# STDIO transport - standard MCP mode (minimal dependencies)
stdio = []

# TCP transport - JSON-RPC over raw TCP sockets
tcp = ["tokio/net"]

# HTTP transport - JSON-RPC over HTTP (adds axum, tower, tower-http)
http = ["dep:axum", "dep:tower", "dep:tower-http", "dep:http", "dep:http-body-util", "dep:bytes"]

# All transports enabled
all = ["stdio", "tcp", "http"]

[dependencies]
# MCP SDK
rmcp = { version = "0.11", features = ["server", "transport-io", "macros", "schemars"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time", "io-std", "io-util", "sync"] }
futures = "0.3.31"

# HTTP server (optional - only with "http" feature)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
http = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metadata
lofty = "0.22.4"
musicbrainz_rs = { version = "0.12", default-features = false, features = ["blocking"] }
reqwest = { version = "0.12.26", features = ["blocking", "json"] }

# Utilities
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
schemars = "1"

[dev-dependencies]
tokio-test = "0.4"

tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
